[tool.poetry]
name = "celery-exporter"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.20"
celery = "^5.3"
pydantic = "^2.6"
pydantic-settings = "^2.2"
structlog = "^24.1"


[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.19"
mypy = "^1.9"
types-pytz = "^2024.1.0"
isort = "^5.13"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
